Fixed another alignment for index.html's welcome section.

--- a/Website/style.css
+++ b/Website/style.css
@@ -81,6 +81,7 @@ header{
 #welcome p{
     font-weight: 700;
     font-size: 28px;
+	padding-bottom:20px;
 }
 
 #announcement{
